{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 1,
  "lineage": "fd7a7a73-212e-713b-f3cd-fe9584ea60f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069221c37efddd286",
            "arn": "arn:aws:ec2:us-east-2:948877897372:elastic-ip/eipalloc-069221c37efddd286",
            "domain": "vpc",
            "id": "eipalloc-069221c37efddd286",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-18-223-45-190.us-east-2.compute.amazonaws.com",
            "public_ip": "18.223.45.190",
            "public_ipv4_pool": "amazon",
            "region": "us-east-2",
            "tags": {
              "Name": "static ip"
            },
            "tags_all": {
              "Name": "static ip"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-040855b0715ee6f0b",
            "arn": "arn:aws:ec2:us-east-2:948877897372:instance/i-00681d06b21df9f06",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00681d06b21df9f06",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03f583555d5f3ec51"
              }
            ],
            "primary_network_interface_id": "eni-03f583555d5f3ec51",
            "private_dns": "ip-10-0-1-92.us-east-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.92",
            "public_ip": "18.188.227.100",
            "region": "us-east-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05b01a280ecbe9099",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07eedb72c50d3e7a4",
            "tags": {
              "Name": "VPC-EC2"
            },
            "tags_all": {
              "Name": "VPC-EC2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05e92ef15cbb1418d"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public",
            "aws_vpc.demo",
            "data.aws_ami.latest"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:948877897372:internet-gateway/igw-037193a276af6d1a1",
            "id": "igw-037193a276af6d1a1",
            "owner_id": "948877897372",
            "region": "us-east-2",
            "tags": {
              "Name": "igw"
            },
            "tags_all": {
              "Name": "igw"
            },
            "vpc_id": "vpc-062f4ba7749134f7b"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-069221c37efddd286",
            "association_id": "eipassoc-0f09c139bdb90cd47",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0b3e0a298e774f72d",
            "network_interface_id": "eni-0427bf463babd914f",
            "private_ip": "10.0.1.124",
            "public_ip": "18.223.45.190",
            "region": "us-east-2",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07eedb72c50d3e7a4",
            "tags": {
              "Name": "natgatway"
            },
            "tags_all": {
              "Name": "natgatway"
            },
            "vpc_id": "vpc-062f4ba7749134f7b"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:948877897372:route-table/rtb-0bea45b96294bd01e",
            "id": "rtb-0bea45b96294bd01e",
            "owner_id": "948877897372",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b3e0a298e774f72d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062f4ba7749134f7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:948877897372:route-table/rtb-015d80d0f11705380",
            "id": "rtb-015d80d0f11705380",
            "owner_id": "948877897372",
            "propagating_vgws": [],
            "region": "us-east-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-037193a276af6d1a1",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-062f4ba7749134f7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a37b21621ab1ed5c",
            "region": "us-east-2",
            "route_table_id": "rtb-0bea45b96294bd01e",
            "subnet_id": "subnet-090ddf617410250b7"
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ac4aaa1e0d6ff42",
            "region": "us-east-2",
            "route_table_id": "rtb-015d80d0f11705380",
            "subnet_id": "subnet-07eedb72c50d3e7a4"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:948877897372:security-group/sg-05e92ef15cbb1418d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05e92ef15cbb1418d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "948877897372",
            "region": "us-east-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "my-sg"
            },
            "tags_all": {
              "Name": "my-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-062f4ba7749134f7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:948877897372:subnet/subnet-090ddf617410250b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ddf617410250b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "948877897372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "private subnet "
            },
            "tags_all": {
              "Name": "private subnet "
            },
            "vpc_id": "vpc-062f4ba7749134f7b"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:948877897372:subnet/subnet-07eedb72c50d3e7a4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07eedb72c50d3e7a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "948877897372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-2",
            "tags": {
              "Name": "public subnet"
            },
            "tags_all": {
              "Name": "public subnet"
            },
            "vpc_id": "vpc-062f4ba7749134f7b"
          },
          "dependencies": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:948877897372:vpc/vpc-062f4ba7749134f7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0282f349a08d370f4",
            "default_route_table_id": "rtb-034715973015b6595",
            "default_security_group_id": "sg-04088caae643d90ca",
            "dhcp_options_id": "dopt-0541824a18fade076",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-062f4ba7749134f7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-034715973015b6595",
            "owner_id": "948877897372",
            "region": "us-east-2",
            "tags": {
              "Name": "demo-vpc"
            },
            "tags_all": {
              "Name": "demo-vpc"
            }
          }
        }
      ]
    }
  ]
}